objects/Form_Element__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_Type__c</fullName>
        <inlineHelpText>Type of the column in the data table for related list when the parent section is configured as Related List Container</inlineHelpText>
        <label>Column Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Column__c</fullName>
        <label>Column</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Label__c</fullName>
        <inlineHelpText>When the Related List Container checkbox on the parent section is checked this field is used for Label of the column in related list</inlineHelpText>
        <label>Custom Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Expression__c</fullName>
        <label>Decision Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_API_Lower_Case__c</fullName>
        <formula>SUBSTITUTE(  LOWER(Field_API_Name__c) ,&apos;_&apos;,&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field API Lower Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Definition_Version_Formula__c</fullName>
        <formula>Section__r.Form_Definition_Version__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Definition Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Element_Key__c</fullName>
        <formula>LOWER(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Element Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Snippet_Code__c</fullName>
        <label>HTML Snippet Code</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HTML_Snippet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTML Snippet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if the field configured for this Form Element is to be rendered as Read Only.</inlineHelpText>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Gear_Key_Mapping__c</fullName>
        <formula>IF( ISBLANK( Record_Gear_Key__c ) ,  LOWER(Field_API_Name__c) , LOWER(Record_Gear_Key__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Gear Mapping Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Gear_Key__c</fullName>
        <inlineHelpText>The search text to find the gear when the key from event object in handleInputFieldChange function is different from the field api name of the sobject</inlineHelpText>
        <label>Record Gear Search Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Layout__c</fullName>
        <formula>Section__r.Form_Definition_Version__r.Form_Definition__r.Object_API_Name__c  &amp; &quot; - &quot;  &amp;  Section__r.Form_Definition_Version__r.Form_Definition__r.Reference_Page_Layout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Layout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Section</label>
        <referenceTo>Form_Container__c</referenceTo>
        <relationshipLabel>Form Elements</relationshipLabel>
        <relationshipName>Form_Elements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>EDF Form Element</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Section__c</columns>
        <columns>Form_Definition_Version_Formula__c</columns>
        <columns>Active__c</columns>
        <columns>Reference_Layout__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Record_Gear_Key_Mapping__c</columns>
        <columns>Sequence__c</columns>
        <columns>Column__c</columns>
        <columns>Decision_Expression__c</columns>
        <columns>HTML_Snippet__c</columns>
        <columns>HTML_Snippet_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Hidden__c</columns>
        <columns>Custom_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FE-{0000}</displayFormat>
        <label>Form Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Elements</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Field_API_Name_Mandatory_Scenario</fullName>
        <active>false</active>
        <description>Field API Name is Mandatory when HTML Snippet checkbox is unchecked</description>
        <errorConditionFormula>if( HTML_Snippet__c = false &amp;&amp;  ISBLANK( Field_API_Name__c ),true,false)</errorConditionFormula>
        <errorMessage>Field API Name is Mandatory when Form Element is not an HTML Snippet</errorMessage>
    </validationRules>
</CustomObject>